--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "dependencies": {
     "@line/bot-sdk": "^6.8.4",
     "express": "^4.17.1"
-  }
-  "script": {
+  },
+  "scripts": {
     "start": "node server.js"
   }
 }
