--- a/package.json
+++ b/package.json
@@ -5,9 +5,14 @@
   "license": "MIT",
   "dependencies": {
     "@line/bot-sdk": "^6.8.4",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.20.0",
     "express": "^4.17.1"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint server.js"
   }
 }
