--- a/package.json
+++ b/package.json
@@ -13,6 +13,6 @@
   "scripts": {
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint server.js"
+    "lint": "eslint server.js message.json"
   }
 }
