--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "@line/bot-sdk": "^6.8.4",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.0",
-    "express": "^4.17.1"
+    "eslint-plugin-prettier": "^3.1.2",
+    "express": "^4.17.1",
+    "prettier": "^1.19.1"
   },
   "scripts": {
     "start": "node server.js",
